src/tests/fixtures/comments/invalidTagInLinecomment.ts.expected
-----------------
INPUT
----------------- 
// @gqlTyp
export default class Composer {
  url(): string {
    return `/composer/`;
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/comments/invalidTagInLinecomment.ts:1:4 - error: `@gqlTyp` is not a valid Grats tag. Valid tags are: `@gqlType`, `@gqlField`, `@gqlScalar`, `@gqlInterface`, `@gqlEnum`, `@gqlUnion`, `@gqlInput`.

1 // @gqlTyp
     ~~~~~~~
src/tests/fixtures/comments/invalidTagInLinecomment.ts:1:4 - error: Unexpected Grats tag in line comment. Grats only supports GraphQL tags in JSDoc-style block comments. e.g. `/** @gqlType */`

1 // @gqlTyp
     ~~~~~~~
